# ohmframe-drawer

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/ai/: claude.ts  drawingReview.ts
src/lib/drawing/: datums.ts  dimensionLayout.ts  dimensions.ts  projection.ts  svgRenderer.ts
src/lib/step/: stepLoader.ts
src/types/: global.d.ts  index.ts  occt-import-js.d.ts
